GeneWeb Version 1.08
--------------------

* gwd: fixed several displaying bugs due to ANSEL

* gwc, gwu:
  - added backslash as escape character for underscores

* gwc:
  - display "+" for dead people even if not known date
  - save much much memory space while running when there are many many notes

* ged2gwb:
  - fixed bug displaying "Uncaught exception: Stream.Error("get to eoln")" when
    the gedcom file did not end with a newline

* consang:
  - more clear message when consang does not work, because of loop in database

* doc:
  - added doc for merging databases, persons and families.
  - added doc for databases maintenance.
  - small changes in diruse.htm, server.htm, start.htm

GeneWeb Version 1.07
--------------------

* Added some stuff to allow chinese like languages.
* Started chinese translation
* Added source field for birth, baptism, death, burial, marriage.

* gwd:
  - fixed bug, missing ancestors were printed in reverse order
  - fixed bug, could not find file "start.txt" in -hd directory.
  - fixed bug, missing persons when displaying close names
  - used flags for languages selection instead of tables
  - better displaying of dates for the miscellaneous languages
  - display birthdays of persons with death "don't know" (but without age)

* ged2gwb:
  - does not stop any more when bad GEDCOM line found => warning and goes on.
  - added option -nd setting flag "not dead" instead of "don't know if dead"
    for personal records where "DEAT" exists but is empty.

* gwb2ged:
  - start now pointers with 1 instead of 0 because some softwares seem not
    to accept @I0@ and @F0@.
  - generate always ANSEL encoding

* gwu:
  - added option -d to select descendants like in gwb2ged

GeneWeb Version 1.06
--------------------

* ged2gwb:
  - warning, not error now, when a person is undefined
* a.cnf:
  - added example of setting background image

GeneWeb Version 1.05
--------------------

* gwd:
  - added ability to merge persons and families.